[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/backgrounds/bg_menu.png" type="Texture" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/main_menu.gd" type="Script" id=4]
[ext_resource path="res://ui/fading_screen.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/main_button.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/cluf.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/credits.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/main_font.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/sounds/musics/ouverture.ogg" type="AudioStream" id=10]
[ext_resource path="res://ui/PhoneInfos.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/confirmation_new_game.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 36
outline_color = Color( 0.784314, 0.188235, 0.188235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="."]
margin_left = 57.0
margin_top = 387.0
margin_right = 97.0
margin_bottom = 427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="buttons"]
margin_left = -12.0
margin_top = -115.0
margin_right = 202.78
margin_bottom = -43.396
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "     Jouer     "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditButton" type="Button" parent="buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 132.78
margin_bottom = 46.604
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Cr√©dits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New_game" type="Button" parent="buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -242.0
margin_right = 266.78
margin_bottom = -173.396
theme = ExtResource( 2 )
text = "Nouvelle Partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="." instance=ExtResource( 5 )]
margin_left = 24.0
margin_top = 631.0
margin_right = 9240.0
margin_bottom = 6031.0

[node name="Credits" parent="." instance=ExtResource( 8 )]
visible = false

[node name="SkipIntro" type="Button" parent="."]
margin_right = 20.0
margin_bottom = 20.0
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CLUF" parent="." instance=ExtResource( 7 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="PhoneInfos" parent="." instance=ExtResource( 11 )]
margin_left = 63.0
margin_top = 209.0
margin_right = 971.0
margin_bottom = 492.0

[node name="confirmation_new_game" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = 50.0
margin_top = 199.0
margin_right = 958.0
margin_bottom = 433.0

[connection signal="pressed" from="buttons/Button" to="ColorRect" method="fade_in"]
[connection signal="pressed" from="buttons/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="buttons/New_game" to="." method="_on_New_game_pressed"]
[connection signal="fade_finished" from="ColorRect" to="." method="on_fade_finished"]
[connection signal="pressed" from="SkipIntro" to="." method="_on_SkipIntro_pressed"]
[connection signal="next_button_pressed" from="PhoneInfos" to="." method="_on_PhoneInfos_next_button_pressed"]
[connection signal="Im_sure" from="confirmation_new_game" to="ColorRect" method="_on_confirmation_new_game_Im_sure"]
[connection signal="No_its_a_mistake" from="confirmation_new_game" to="." method="_on_confirmation_new_game_No_its_a_mistake"]
